# trans-manus-claude-code-ver

./: .gitignore  CLAUDE.md  README.md  growth-force-mvp-detailed-spec.md  growth-force-reporting-agent-spec.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  prompts.py
backend/src/api/: auth.py  bigquery.py  reports.py
backend/src/middleware/: security.py
backend/src/services/: bigquery_service.py  claude_auth_service.py  claude_service.py  session_service.py
docs/: architecture.md  claude-subscription-hack.md  development-summary.md  product-backlog.md  setup-guide.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  ErrorMessage.tsx  LoadingIndicator.tsx  MessageBubble.tsx
frontend/src/components/report/: DataTable.tsx  MetricCard.tsx  ReportDisplay.tsx  SummaryCard.tsx
frontend/src/components/report/charts/: BarChartComponent.tsx  LineChartComponent.tsx  PieChartComponent.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: api.ts
